@@ -8,7 +8,6 @@ use namespace::clean;
 
 has importer => (is  => 'lazy');
 has logger   => (is => 'lazy');
-has config   => (is => 'lazy');
 
 after _build_importer => sub { };
 
@@ -17,10 +16,51 @@ sub _build_logger {
     return Log::Log4perl->get_logger('datahub');
 }
 
-# TODO: ChangeMe
-sub _build_config {
-    my $self = shift;
-    return new Config::Simple('conf/settings.ini');
-}
 
 1;
+__END__
+
+=encoding utf-8
+
+=head1 NAME
+
+Datahub::Factory::Importer - Namespace for importer packages
+
+=head1 SYNOPSIS
+
+    use Datahub::Factory;
+    use Data::Dumper qw(Dumper);
+
+    my $importer_options = {
+        endpoint => 'https://my.oai.org/oai'
+    };
+
+    my $importer = Datahub::Factory->importer('OAI')->new($importer_options);
+
+    $importer->importer->each({
+        my $item = shift;
+        print Dumper($item);
+    });
+
+=head1 DESCRIPTION
+
+A Datahub::Factory::Importer is a package that is used as a L<role|Moose::Role> for packages
+that import records. It enforces a generic reusable interface so
+different packages can be loaded and executed programmatically.
+
+=head1 AUTHORS
+
+Pieter De Praetere <pieter@packed.be>
+
+Matthias Vandermaesen <matthias.vandermaesen@vlaamsekunstcollectie.be>
+
+=head1 COPYRIGHT
+
+Copyright 2017 - PACKED vzw, Vlaamse Kunstcollectie vzw
+
+=head1 LICENSE
+
+This library is free software; you can redistribute it and/or modify
+it under the terms of the GPLv3.
+
+=cut
